--- a/comms/Cargo.toml
+++ b/comms/Cargo.toml
@@ -14,8 +14,12 @@ server = ["serde_json", "tokio", "tokio-stream"]
 anyhow = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
-tokio = { version = "1.32.0", default-features = false, features = ["net"], optional = true }
-tokio-stream = { version = "0.1.14", default-features = false, features = ["io-util"], optional = true }
+tokio = { version = "1.32.0", default-features = false, features = [
+    "net",
+], optional = true }
+tokio-stream = { version = "0.1.14", default-features = false, features = [
+    "io-util",
+], optional = true }
 
 [dev-dependencies]
 serde_json = "1.0.105"
