--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,7 +15,8 @@ tokio = { version = "1.32.0", features = ["full"] }
 tokio-stream = { version = "0.1.14" }
 tokio-tungstenite = "0.21.0"
 futures-util = "0.3.30"
-url = "2.3.1"
+lazy_static = "1.4.0"
+argparse = "0.2.2"
 
 [dev-dependencies]
 comms = { path = "../comms", features = ["client"] }
